argocd/tools/wallos/wallos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wallos
