argocd/tools/wallos/wallos-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallos-internal-route
  namespace: tools
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["wallos.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: wallos
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallos-route
  namespace: tools
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-default
    namespace: default
  hostnames: ["wallos.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: wallos
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
